# reverb-designer

./: .gitignore  CMakeLists.txt  README.md
include/: AllPassFilterUI.h  AudioProcessorUI.h  AudioProcessorUIFactory.h  CombFilterUI.h  ConnectionHandler.h  Constants.h  DragHandler.h  FilterUI.h  GainUI.h  GraphEditor.h  MainMenu.h  NestedApfUI.h  Output.h  PluginEditor.h  PluginGraph.h  PluginProcessor.h  PresetFactory.h  ProcessorUIHandler.h  SelectionHandler.h  SimpleDelayUI.h  StorageManager.h  Utilities.h
include/dsp/: AudioDetector.h  AudioFilter.h  AudioFilterCalculations.h  AudioProcessingBlock.h  AudioProcessorFactory.h  AudioProcessorNode.h  AudioProcessorState.h  BiquadFilter.h  BitCrusher.h  CircularBuffer.h  ClassATubePre.h  CombFilter.h  Delay.h  DelayAPF.h  DynamicsProcessor.h  EnvelopeFollower.h  FeedbackDelay.h  Gain.h  IAudioProcessor.h  IAudioSignalGenerator.h  IDelayProcessor.h  LFO.h  LRFilterBank.h  ModifiedReverb.h  ModulatedDelay.h  NestedDelayAPF.h  Parameters.h  PassThrough.h  PluginGraph.h  ReverbTank.h  SimpleDelay.h  SimpleLPF.h  TriodeClassA.h  TwoBandShelvingFilter.h
include/parameters/: AudioParameters.h  Parameter.h
include/ui/: AllPassFilterUI.h  AudioProcessorUI.h  AudioProcessorUIContextMenu.h  AudioProcessorUIFactory.h  BaseParameter.h  BoolParameter.h  CombFilterUI.h  ComboBoxParameter.h  FilterUI.h  GainUI.h  GraphEditor.h  Input.h  MainGraphEditor.h  MainMenu.h  ModDelayUI.h  NestedApfUI.h  Node.h  NodeConnection.h  NodeConnectionDrawer.h  NumberParameter.h  Output.h  SimpleDelayUI.h  SliderParameter.h
include/utils/: Constants.h  HitTest.h  ManagedArray.h  Math.h  PresetFactory.h  Presets.h  StorageManager.h  XmlGenerator.h  XmlUtils.h
presets/: FeedbackComb.xml  FeedforwardComb.xml  Figure8Reverb.xml  SchroederReverb.xml
src/: APF.xml  AllPassFilterUI.cpp  AllPassFilterUI.h  AudioDetector.cpp  AudioDetector.h  AudioFilter.cpp  AudioFilter.h  AudioProcessingBlock.cpp  AudioProcessingBlock.h  AudioProcessorFactory.h  AudioProcessorState.h  AudioProcessorUI.cpp  AudioProcessorUI.h  AudioProcessorUIContextMenu.cpp  AudioProcessorUIFactory.h  BaseParameter.cpp  BinaryData.cpp  BinaryData.h  BiquadFilter.cpp  BiquadFilter.h  BitCrusher.cpp  BitCrusher.h  BoolParameter.cpp  BoolParameter.h  CircularBuffer.cpp  ClassATubePre.cpp  ClassATubePre.h  CombFilter.cpp  CombFilter.h  CombFilterUI.cpp  CombFilterUI.h  ComboBoxParameter.cpp  ComboBoxParameter.h  ConnectionHandler.cpp  Delay.cpp  Delay.h  DelayAPF.cpp  DelayAPF.h  DragHandler.cpp  DynamicsProcessor.cpp  (+69 more)
src/dsp/: AudioFilter.cpp  AudioProcessingBlock.cpp  AudioProcessorNode.cpp  BiquadFilter.cpp  BitCrusher.cpp  CircularBuffer.cpp  ClassATubePre.cpp  CombFilter.cpp  Delay.cpp  DelayAPF.cpp  DynamicsProcessor.cpp  EnvelopeFollower.cpp  FeedbackDelay.cpp  Gain.cpp  LFO.cpp  LRFilterBank.cpp  ModifiedReverb.cpp  ModulatedDelay.cpp  NestedDelayAPF.cpp  PassThrough.cpp  PluginGraph.cpp  ReverbTank.cpp  SimpleLPF.cpp  TriodeClassA.cpp
src/parameters/: AudioParameters.cpp
src/ui/: AllPassFilterUI.cpp  AudioProcessorUI.cpp  AudioProcessorUIContextMenu.cpp  BaseParameter.cpp  BoolParameter.cpp  CombFilterUI.cpp  ComboBoxParameter.cpp  ConnectionHandler.cpp  DragHandler.cpp  FilterUI.cpp  GainUI.cpp  (+17 more)
(+159 files in other folders)
